recovery old pages

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,2 +1,9 @@
-<!-- Wappler include head-page="layouts/main" fontawesome_5="cdn" bootstrap5="local" is="dmx-app" id="index" appConnect="local" -->
-<meta name="ac:route" content="/">
+<!-- Wappler include head-page="layouts/index" fontawesome_5="cdn" bootstrap5="local" is="dmx-app" id="index" appConnect="local" components="{dmxNotifications:{},dmxBrowser:{},dmxStateManagement:{},dmxValidator:{},dmxBootstrap5Modal:{},dmxBootbox5:{},dmxFormatter:{}}" jquery_slim_35="local" moment_2="local" -->
+<link href="/css/index.css" rel="stylesheet" />
+<meta content="/" name="ac:route">
+<div id="browser" is="dmx-browser">
+</div>
+<dmx-cookie-manager id="cookies">
+</dmx-cookie-manager>
+<dmx-notifications id="notify" timeout="500">
+</dmx-notifications>
